<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language_toggle"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/nav_language_toggle" />
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_pengaturan_koneksi"
            android:icon="@android:drawable/stat_sys_data_bluetooth"
            android:title="@string/nav_pengaturan_koneksi" />
        <item
            android:id="@+id/nav_pengaturan_nota"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_pengaturan_nota" />
        <item
            android:id="@+id/nav_tes_cetak"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_tes_cetak" />
        <item
            android:id="@+id/nav_bridge_print"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/nav_bridge_print" />
        <item
            android:id="@+id/nav_log_cetak"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/nav_log_cetak" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_help" />
    </group>
</menu>
